--- a/src/app/pages/blank/blank.component.html
+++ b/src/app/pages/blank/blank.component.html
@@ -5,7 +5,7 @@
       <div class="col-11">
         <h1>Postes</h1>
       </div>
-      <button class="btn btn-outline-success"><i class="fas fa-plus-circle"></i></button>
+      <button class="btn btn-outline-success"  data-toggle="modal" data-target="#addPosteModal"><i class="fas fa-plus-circle"></i></button>
     </div>
   </div>
   <!-- /.container-fluid -->
@@ -18,13 +18,13 @@
 
     <div class="float-left">
       <span>Filtre : </span>
-      <button class="btn btn-outline-info ml-3">All</button>
-      <button class="btn btn-outline-info ml-3">Libelle</button>
-      <button class="btn btn-outline-info ml-3">Pas de position</button>
-      <button class="btn btn-outline-info ml-3">Nombre de clients</button>
+      <button (click)="currentPage=0;getAll();" class="btn btn-outline-info ml-3">All</button>
+      <button (click)="currentPage=0;getByLibelle();" class="btn btn-outline-info ml-3">Libelle</button>
+      <button (click)="currentPage=0;getWithoutPosition();" class="btn btn-outline-info ml-3">Pas de position</button>
+      <button (click)="currentPage=0;getByNbClients();" class="btn btn-outline-info ml-3">Nombre de clients</button>
     </div>
     <div class="form-group form-inline float-right">
-      Recherche: <input class="form-control ml-2" type="text" name="searchTerm"/>
+        Recherche: <input #search (keyup)="currentPage=0;getBySearch(search.value);" [(ngModel)]="searchValue" class="form-control ml-2" type="text" name="searchTerm"/>
     </div>
 
     <table class="table table-hover table-bordered table-sm">
@@ -47,13 +47,81 @@
           <td>{{p?.nb_clients}}</td>
           <td>
             <button class="btn btn-outline-danger mr-2"><i class="fas fa-trash-alt"></i></button>
-            <button class="btn btn-outline-primary"><i class="fas fa-map-marker-alt"></i></button>
+            <button *ngIf="p?.x_gps !== 0" class="btn btn-outline-primary"><i class="fas fa-map-marker-alt"></i></button>
           </td>
         </tr>
       </tbody>
     </table>
 
+    <div class="row">
+      <div class="col">
+
+      <ul class="list-group">
+        <li class="list-group-item d-flex justify-content-between align-items-center">
+          Page :
+          <span class="badge badge-dark badge-pill">{{currentPage+1}}</span>
+        </li>
+        <li class="list-group-item d-flex justify-content-between align-items-center">
+          Nombre de pages :
+          <span class="badge badge-dark badge-pill">{{totalPages}}</span>
+        </li>
+        <li class="list-group-item d-flex justify-content-between align-items-center">
+          Nombre de postes :
+          <span class="badge badge-dark badge-pill">{{totalElements}}</span>
+        </li>
+      </ul>
+
+      </div>
+
+      <div class="col">
+      <nav aria-label="Page navigation float-right justify-content-end">
+        <ul class="pagination pagination-sm justify-content-end">
+          <li class="page-item" [ngClass]="firstPage?'disabled':''">
+            <a class="page-link" (click)="getDeb();"><< Début</a>
+          </li>
+          <li class="page-item" [ngClass]="firstPage?'disabled':''">
+            <a class="page-link" (click)="getPrec();" >Précédent</a>
+          </li>
+          <li class="page-item" [ngClass]="lastPage?'disabled':''">
+            <a class="page-link" (click)="getSuiv();" >Suivant</a>
+          </li>
+          <li class="page-item" [ngClass]="lastPage?'disabled':''">
+            <a class="page-link" (click)="getFin();">Fin >></a>
+          </li>
+        </ul>
+      </nav>
+      </div>
+
+    </div>
+
   </div>
+
+  <!-- Add poste Modal -->
+  <div class="modal fade" id="addPosteModal" tabindex="-1" role="dialog" aria-labelledby="Ajouter Poste" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Ajouter un poste DP</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <form>
+        <div class="modal-body">
+            <div class="form-group">
+              <label for="Libelle" class="col-form-label">Libelle :</label>
+              <input type="text" class="form-control" id="Libelle">
+            </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Annuler</button>
+          <button type="button" class="btn btn-success">Ajouter</button>
+        </div>
+        </form>
+      </div>
+    </div>
+  </div>
+
 
 </section>
 <!-- /.content -->
