--- a/src/app/modules/main/menu-sidebar/menu-sidebar.component.html
+++ b/src/app/modules/main/menu-sidebar/menu-sidebar.component.html
@@ -30,25 +30,25 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a [routerLink]="['/blank']" class="nav-link">
+                <a (click)="resetMarkerInfo();" [routerLink]="['/consommation']" class="nav-link">
                     <i class="nav-icon fas fa-tachometer-alt"></i>
                     <p>Consommation</p>
                 </a>
             </li>
-            <li class="nav-item">
-                <a [routerLink]="['/blank']" class="nav-link">
+            <li (click)="resetMarkerInfo();" class="nav-item">
+                <a [routerLink]="['/postes']" class="nav-link">
                     <i class="nav-icon fas fa-map-marked-alt"></i>
                     <p>Postes</p>
                 </a>
             </li>
-            <li class="nav-item">
-                <a [routerLink]="['/blank']" class="nav-link">
+            <li (click)="resetMarkerInfo();" class="nav-item">
+                <a  class="nav-link">
                     <i class="nav-icon fas fa-users"></i>
                     <p>Clients</p>
                 </a>
             </li>
-            <li class="nav-item">
-                <a [routerLink]="['/blank']" class="nav-link">
+            <li (click)="resetMarkerInfo();" class="nav-item">
+                <a  class="nav-link">
                     <i class="nav-icon fas fa-exclamation-triangle"></i>
                     <p>Zones sensibles</p>
                 </a>
