filtring by rendement

--- a/src/app/pages/blank/blank.component.html
+++ b/src/app/pages/blank/blank.component.html
@@ -132,7 +132,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" (click)="modal.dismiss('Cross click')">Annuler</button>
-        <button [disabled]="addPoste.invalid" (click)="onSubmit(addPoste);" type="submit" class="btn btn-success">Ajouter</button>
+        <button [disabled]="addPoste.invalid" type="submit" class="btn btn-success">Ajouter</button>
       </div>
     </form>
 
