itinerary to any poste

--- a/src/app/pages/blank/blank.component.html
+++ b/src/app/pages/blank/blank.component.html
@@ -111,7 +111,7 @@
     <form #addPoste="ngForm" (ngSubmit)="onSubmit(addPoste);">
       <div class="modal-body">
         <div class="form-group">
-          <label for="Libelle" class="col-form-label">Libelle :</label>
+          <label for="Libelle" class="col-form-label">Libellé :</label>
           <input ngModel name="libelle" type="text" class="form-control" id="Libelle" required>
           <label for="type_poste" class="col-form-label">Type de poste :</label>
           <input ngModel name="type_poste" type="text" class="form-control" id="type_poste" required>
@@ -121,7 +121,7 @@
           <input ngModel name="id_prao" type="text" class="form-control" id="id_prao" required>
           <label for="nb_clients" class="col-form-label">Nombre de clients :</label>
           <input ngModel name="nb_clients" type="number" class="form-control" id="nb_clients" required>
-          <label for="ref_dlg" class="col-form-label">Délegation :</label>
+          <label for="ref_dlg" class="col-form-label">Direction Préfectorale :</label>
           <input ngModel name="ref_dlg" type="number" class="form-control" id="ref_dlg" required>
           <label for="fiabilise" class="col-form-label">Fiable :</label>
           <select ngModel name="fiabilise" id="fiabilise" class="form-control" required>
