--- a/src/app/pages/blank/blank.component.html
+++ b/src/app/pages/blank/blank.component.html
@@ -47,7 +47,8 @@
           <td>{{p?.nb_clients}}</td>
           <td>
             <button (click)="changeValue(p);open(deleteModal)" class="btn btn-outline-danger mr-2"><i class="fas fa-trash-alt"></i></button>
-            <button [routerLink]="['/']" (click)="redirectToMarker(p);" *ngIf="p?.x_gps !== 0" class="btn btn-outline-primary"><i class="fas fa-map-marker-alt"></i></button>
+            <button [routerLink]="['/']" (click)="redirectToMarker(p);" *ngIf="p?.x_gps !== 0" class="btn btn-outline-primary mr-2"><i class="fas fa-map-marker-alt"></i></button>
+            <button [routerLink]="['/consommation']" (click)="changeIdPosteConso(p.id_poste);changeNomPosteConso(p.libelle);" class="btn btn-outline-primary"><i class="fas fa-chart-line"></i></button>
           </td>
         </tr>
       </tbody>
