--- a/src/app/modules/main/header/user-dropdown-menu/user-dropdown-menu.component.html
+++ b/src/app/modules/main/header/user-dropdown-menu/user-dropdown-menu.component.html
@@ -31,7 +31,7 @@
             <a [routerLink]="['/profile']" class="btn btn-default btn-flat">
                 Profile
             </a>
-            <a class="btn btn-default btn-flat float-right"
+            <a (click)="Logout()" class="btn btn-default btn-flat float-right"
                 >Déconnexion</a
             >
         </li>
