--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -15,11 +15,12 @@
 
         <div class="form-group">
           <label for="username"><img class="img-fluid" src="assets/img/user.svg" alt="image" width="20px"> Username</label>
-          <input type="text" class="form-control" name="username" id="username" aria-describedby="textHelpId" required>
+          <input type="text" class="form-control" name="username" [(ngModel)]="username" id="username" aria-describedby="textHelpId" required>
           <label for="password"><img class="img-fluid" src="assets/img/lock.svg" alt="image" width="20px"> Password</label>
-          <input type="password" class="form-control" name="password" id="password" aria-describedby="passwordHelpId" required>
+          <input type="password" class="form-control" name="password" [(ngModel)]="password" id="password" aria-describedby="passwordHelpId" required>
         </div>
-        <button class="btn" >Connexion</button>
+        <p *ngIf="invalidLogin" style="color:red;">Username or password invalid</p>
+        <button class="btn" (click)="checkLogin()" >Connexion</button>
 
       </div>
     </div>
